# ocaml-template

./: .gitignore  .ocamlformat  .pre-commit-config.yaml  README.md  dune-project  flake.nix  template.opam
.github/workflows/: ci.yml
lib/: dune  env.ml  env.mli  parcoom.ml  parcoom.mli  template.ml
